# LoopGotoWhile

./: README.md  loopgotowhile.cabal  runtests.sh
tests/: TestSuite.hs  test.txt
